solc_mutator_ossfuzz_seed_corpus/test_solidity/test_7233b07f67a9c5037bec74765a5225022e927a93b957fa4e712c1b2126f9d0f3_671486ae036a9aa33914a6716d470094919f79eb_sol.sol
==== Source:  ====

==== Source: su0.sol ====
int88 constant cons0 = (int88(0) - int88(0));
error er0(address payable ep0);
contract C0 {
  fallback() external   payable
  {
    assembly
    {
      if 115792089237316195423570985008687907853269984665640564039457584007913129639935
      {
        switch cons0
        default
        {
        }
        switch cons0
        default
        {
        }
      }
    }
    revert er0(payable(address(this)));
  }
  bytes4   s0 = bytes4(0x00000000);
  int96 immutable  s1;
  constructor(int96 i0) payable  {
    s1 = i0;
    unchecked {
      require(false, string.concat("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff", "98afe19a5530c5dcf1f0aa7bb5ffffffffffffffffffff", string("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff00000000000000000000000000000000000000")));
    }
  }
  error er1(uint248 ep0);
  type T0 is address payable;
  receive() external virtual  payable
  {
    assembly
    {
    }
  }
}
pragma solidity >= 0.0.0;
// ----
// Warning 9592: (su0.sol:251-299): "switch" statement with only a default case.
// TypeError 7615: (su0.sol:258-263): Only direct number constants and references to such constants are supported by inline assembly.
// Warning 9592: (su0.sol:308-356): "switch" statement with only a default case.
// TypeError 7615: (su0.sol:315-320): Only direct number constants and references to such constants are supported by inline assembly.
